--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,6 @@ body {
 }
 
 html {
-	height: 100%;
 	box-sizing: border-box;
 }
 
@@ -18,14 +17,10 @@ html {
 body {
 	background-color: var(--lightlightgray);
 	font-family: "nova mono", monospace;
-	min-height: 100%;
 }
 
 .content {
-	margin: 0;
 	display: flex;
-	flex-flow: row nowrap;
-	align-items: center;
 	justify-content: center;
 }
 
