--- a/css/social.css
+++ b/css/social.css
@@ -1,14 +1,25 @@
 html,
 body {
 	--lightlightgray: #eee;
-	--footerheight: 85px;
+}
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.content {
+    margin: 0;
+    /* http://bit.ly/1Mn35US */
+    flex: 1 0 auto;
 }
 
 footer {
 	background-color: var(--lightlightgray);
-	position: absolute;
-	bottom: 0;
 	width: 100%;
+    position: relative;
+    z-index: 10;
 }
 
 .social {
@@ -34,7 +45,7 @@ footer {
 }
 
 .social img {
-	height: 50px;
-	width: 50px;
+	height: 40px;
+	width: 40px;
 	margin: 5px 10px;
 }
